Modify the application template. Refactor the package.
